# MentraOS

./: .gitignore  .gitmodules  A6_UPDATED_DRIVER_BRANCH_README.md  AGENTS.md  CLAUDE.md  COLE_LOG_AUDIT_TODO.md  MISSION_COMPLETE_PHOTO_TIMING.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE_OPTIMIZATIONS.md  README.md  WECHAT_MESSAGE_COLE_ZEPHYR_SHELL.md  ZEPHYR_SHELL_IMPLEMENTATION_REQUEST.md  eslint.config.mjs  fix-author.sh  glasses-compatibility.md  package-lock.json  package.json
.github/: copilot-instructions.md
cloud/: package.json  (+8 more)
mcu_client/nrf5340_ble_simulator/: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakeLists.txt.backup  CMakeLists.txt.pre-mcumgr-backup  CMakeLists_i2s_loopback.txt  DISPLAY_MIRROR_INVESTIGATION.md  Kconfig  LVGL_DISPLAY_IMPLEMENTATION_REPORT.md  MULTILINGUAL_FONT_STORAGE_PLAN.md  PERFORMANCE_OPTIMIZATION.md  PERIPHERAL_UART_NEXT_COMPARISON.md  POSITIONED_TEXT_IMPLEMENTATION_PLAN.md  POSITIONED_TEXT_IMPLEMENTATION_SUMMARY.md  PR_DESCRIPTION.md  QUICK_SCRIPTS_README.md  README.md  XIP_IMPLEMENTATION_GUIDE.md  XIP_TASK_FOR_COLE.md  ZEPHYR_SHELL_ANALYSIS.md  a6n_display_test.sh  app.overlay  apply_xip_to_fonts.sh  brightness.overlay  brightness_test.sh  build_brightness.sh  build_firmware.sh  build_i2s_loopback.sh  build_mentraos_audio.sh  build_rtt_usbcdc.sh  build_xip.sh  build_xip_mcumgr.sh  display.overlay  flash_firmware.sh  flash_mentraos_audio.sh  flash_rtt_usbcdc.sh  flash_xip_mcumgr.sh  i2s_audio.overlay  i2s_loopback.overlay  linker_arm_extxip.ld  (+23 more)
mcu_client/nrf5340_ble_simulator/boards/: nrf5340dk_nrf5340_cpuapp.overlay  nrf5340dk_nrf5340_cpuapp_ns.conf  nrf5340dk_nrf5340_cpuapp_ns.overlay  nrf5340dk_nrf5340_cpuapp_ns.overlay.working  pdm_audio.overlay
mcu_client/nrf5340_ble_simulator/custom_driver_module/: CMakeLists.txt
mcu_client/nrf5340_ble_simulator/custom_driver_module/drivers/: CMakeLists.txt
mcu_client/nrf5340_ble_simulator/custom_driver_module/drivers/display/: CMakeLists.txt
mcu_client/nrf5340_ble_simulator/custom_driver_module/drivers/display/lcd/: CMakeLists.txt  Kconfig  a6m_0011.c  a6m_0011.h  a6n.c  a6n.h  hls12vga.c  hls12vga.h
mcu_client/nrf5340_ble_simulator/custom_driver_module/dts/bindings/display/: zephyr,custom-a6n.yaml
mcu_client/nrf5340_ble_simulator/custom_driver_module/zephyr/: module.yml
mcu_client/nrf5340_ble_simulator/proto/: mentraos_ble.options  mentraos_ble_pb2.py
mcu_client/nrf5340_ble_simulator/src/: bsp_log_control.c  bspal_audio_i2s.c  bspal_audio_i2s.h  display_manager.c  display_manager.h  extern_code.c  i2s_audio.c  i2s_audio.h  i2s_audio_loopback.c  i2s_audio_loopback.h  i2s_simple_loopback.c  i2s_simple_loopback.h  i2s_simple_loopback_fixed.c  lc3_codec.c  lc3_codec.h  lvgl_demo.c  lvgl_interface.h  main.c  main_gpio_test.c  main_i2s_audio_output_test.c  main_i2s_buffer_recycling.c  main_i2s_init_test.c  main_i2s_loopback.c  main_i2s_memslab_test.c  main_i2s_robust_loopback.c  main_i2s_simple_continuous.c  main_i2s_transfer_test.c  main_i2s_tx_only_test.c  main_i2s_working_loopback.c  main_mentraos_audio_system.c  main_minimal_test.c  main_simple_uart_test.c  mentra_ble_service.c  mentra_ble_service.h  mentra_shell_commands.c  mentraos_audio_system.h  pdm_audio_stream.c  pdm_audio_stream.h  positioned_text_example.c  protobuf_handler.c  (+19 more)
mcu_client/nrf5340_ble_simulator/src/BspLog/: CMakeLists.txt  bsp_log.c  bsp_log.h
mcu_client/nrf5340_ble_simulator/src/fonts/: nrf5340_font_puhui_12_essential.c  nrf5340_font_puhui_12_essential.h  nrf5340_font_puhui_14_essential.c  nrf5340_font_puhui_14_essential.h  nrf5340_font_puhui_16_essential.c  nrf5340_font_puhui_16_essential.h  xip_fonts.h
mcu_client/nrf5340_ble_simulator/src/mos_components/mos_battery/: CMakeLists.txt
mcu_client/nrf5340_ble_simulator/src/mos_components/mos_battery/include/: mos_fuel_gauge.h
mcu_client/nrf5340_ble_simulator/src/mos_components/mos_battery/src/: mos_fuel_gauge.c
mcu_client/nrf5340_ble_simulator/src/mos_components/mos_interrupt/: CMakeLists.txt
mcu_client/nrf5340_ble_simulator/src/mos_components/mos_interrupt/include/: interrupt_handler.h  vad_interrupt_handler.h
mcu_client/nrf5340_ble_simulator/src/mos_components/mos_interrupt/src/: interrupt_handler.c  vad_interrupt_handler.c
mcu_client/nrf5340_ble_simulator/src/mos_components/mos_lvgl_display/include/: display_config.h  mos_lvgl_display.h
mcu_client/nrf5340_ble_simulator/src/mos_components/mos_lvgl_display/src/: display_config.c  mos_lvgl_display.c
mcu_client/nrf5340_ble_simulator/src/mos_components/mos_pdm/include/: mos_pdm.h
mcu_client/nrf5340_ble_simulator/src/mos_components/mos_pdm/src/: mos_pdm.c
mcu_client/nrf5340_ble_simulator/src/mos_components/mos_sysport/src/: bal_os.c
mcu_client/nrf5340_ble_simulator/src/mos_driver/: CMakeLists.txt
mcu_client/nrf5340_ble_simulator/src/mos_driver/include/: bsp_gx8002.h  bspal_audio_i2s.h  bspal_littlefs.h  grus_i2c_boot.h  gx8002_firmware_data.h  gx8002_update.h  lsm6dsv16x.h  npm1300_led.h  opt3006.h
mcu_client/nrf5340_ble_simulator/src/mos_driver/src/: bsp_gx8002.c  bspal_audio_i2s.c  bspal_littlefs.c  gx8002_update.c  lsm6dsv16x.c  npm1300_led.c  opt3006.c
mcu_client/nrf5340_ble_simulator/src/proto/: mentraos_ble.pb.c  mentraos_ble.pb.h
mcu_client/nrf5340_ble_simulator/sysbuild/: mcuboot.conf
mcu_client/nrf5340_ble_simulator/sysbuild/ipc_radio/: app.overlay  prj.conf
mcu_client/nrf5340_ble_simulator/sysbuild/mcuboot/: prj.conf
mcu_client/nrf5340_ble_simulator/sysbuild/mcuboot/boards/: nrf5340dk_nrf5340_cpuapp.overlay
mcu_client/peripheral_uart_next/nrf5340/: CMakeLists.txt  Kconfig  app.overlay  prj.conf
mcu_client/peripheral_uart_next/nrf5340/src/: main.c  protobuf_handler.c  protobuf_handler.h
rust/livekit/: Cargo.toml  build_ios_framework.sh  config.toml
rust/livekit/.cargo/: config
rust/livekit/ios/LiveKit.xcframework/: Info.plist
rust/livekit/ios/MobileExample.xcframework/: Info.plist
rust/livekit/ios/rust-example/: AppDelegate.swift  SceneDelegate.swift  ViewController.swift
rust/livekit/ios/rust-example.xcodeproj/: project.pbxproj
rust/livekit/src/: lib.rs
(+906 files in other folders)
